force-app/main/default/objects/Pharmacy_Sales_Withdrawal__c/Pharmacy_Sales_Withdrawal__c.object-meta.xml
<CustomObject>
    <label>Pharmacy Sales Withdrawal</label>
    <nameField>
        <displayFormat>PSW-{00000}</displayFormat>
        <label>Pharmacy Sales Withdrawal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pharmacy Sales Withdrawals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>