force-app/main/default/objects/Pharmacy_Sales_Withdrawal__c/fields/Brick__c.field-meta.xml
<CustomField>
    <fullName>Brick__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brick</label>
    <referenceTo>Brick__c</referenceTo>
    <relationshipLabel>Pharmacy Sales Withdrawals</relationshipLabel>
    <relationshipName>Pharmacy_Sales_Withdrawals</relationshipName>
    <type>Lookup</type>
</CustomField>