force-app/main/default/objects/Pharmacy_Sales_Withdrawal__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <label>Data Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IbnSina</fullName>
            </value>
            <value>
                <fullName>Pharmaoverseas</fullName>
            </value>
            <value>
                <fullName>Sofico</fullName>
            </value>
            <value>
                <fullName>Egydrug</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>Elezaby</fullName>
            </value>
            <value>
                <fullName>Ebda</fullName>
                <label>EPDA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>