force-app/main/default/objects/Pharmacy_Sales_Withdrawal__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Optional row-level external id for idempotent imports.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>