force-app/main/default/objects/Pharmacy_Sales_Withdrawal__c/fields/Import_Batch__c.field-meta.xml
<CustomField>
    <fullName>Import_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Import Batch</label>
    <referenceTo>Sales_Data_Import_Batch__c</referenceTo>
    <relationshipLabel>Pharmacy Sales Withdrawals</relationshipLabel>
    <relationshipName>Pharmacy_Sales_Withdrawals</relationshipName>
    <type>Lookup</type>
</CustomField>