force-app/main/default/objects/Pharmacy_Sales_Withdrawal__c/fields/Pharmacy_Account__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pharmacy Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pharmacy Sales Withdrawals</relationshipLabel>
    <relationshipName>Pharmacy_Sales_Withdrawals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>