force-app/main/default/objects/Pharmacy_Sales_Withdrawal__c/fields/Product2_Id__c.field-meta.xml
<CustomField>
    <fullName>Product2_Id__c</fullName>
    <description>18-character Product2 Id.</description>
    <label>Product2 Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>