force-app/main/default/objects/Pharmacy_Sales_Withdrawal__c/fields/Quantity_Withdrawn__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Withdrawn__c</fullName>
    <label>Quantity Withdrawn</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>