force-app/main/default/objects/Pharmacy_Sales_Withdrawal__c/fields/Report_Month__c.field-meta.xml
<CustomField>
    <fullName>Report_Month__c</fullName>
    <label>Report Month</label>
    <required>true</required>
    <type>Date</type>
</CustomField>