force-app/main/default/objects/Pharmacy_Sales_Withdrawal__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Composite key for data source, month, pharmacy, and product.</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>